--- a/WemadeNext_Test/WemadeNext_Test.vcxproj.filters
+++ b/WemadeNext_Test/WemadeNext_Test.vcxproj.filters
@@ -8,5 +8,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test_2.cpp" />
+    <ClCompile Include="Test_3.cpp" />
+    <ClCompile Include="Test_4.cpp" />
+    <ClCompile Include="Test_6cpp.cpp" />
   </ItemGroup>
 </Project>
